<resources>
    <string name="app_name">CustomListView</string>
    <string name="textView_text">Магазин продуктов</string>
    <string name="createButtonText">Создать магазин</string>
    <string name="exit_menu_text">Выход</string>
    <string name="nameEditTextHint">Название продукта</string>
    <string name="priceEditTextHint">Цена продукта</string>
    <string name="saveButtonText">Сохранить</string>
    <string name="saveEditButtonText">Сохранить изменения</string>
    <string name="descriptionHintET">Описание продукта</string>
    <string name="descriptionETHint">Описание продукта</string>
    <string name="menu_back_text">Назад</string>
</resources>