<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueViolet"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editImageViewIV"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:layout_margin="@dimen/_6dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditTextET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameEditTextHint"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/priceEditTextET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/priceEditTextHint"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/descriptionEditTextET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionHintET"
                tools:ignore="Autofill,TextFields"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButtonBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_24sp"
        android:padding="@dimen/_8dp"
        android:text="@string/saveButtonText"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item" />


</LinearLayout>